# RustSpeak

./: .gitignore  README.md  protocol_design.txt
client/: Cargo.toml
client/src/: atlas.rs  audio.rs  certificate.rs  cli.rs  command.rs  conc_once_cell.rs  config.rs  font.rs  main.rs  network.rs  new_ui.rs  new_ui_2.rs  new_ui_main_menu.rs  new_ui_serverlist.rs  packet.rs  profile.rs  profile_db.rs  protocol.rs  render.rs  screen_sys.rs  security_level.rs  server.rs  ui.rs  ui_atlas.wgsl  ui_color.wgsl  ui_tex.wgsl  user_db.rs  utils.rs
client/src/command/: cli.rs  impl.rs  mod.rs
client/src/data_structures/: byte_buf_ring.rs  conc_once_cell.rs  mod.rs  sized_box.rs
client/src/screen/: connection_failure.rs  mod.rs  server_channels.rs  server_list.rs
client/src/ui/: iced.rs  mod.rs  new_ui.rs
client/src/ui/wgpu/: atlas.rs  mod.rs  render.rs  screen_sys.rs  ui.rs  ui_atlas.wgsl  ui_atlas_circle.wgsl  ui_atlas_rounded_rectangle.wgsl  ui_color_generic.wgsl  ui_color_rounded_rectangle.wgsl
client/src/ui/wgpu/screen/: connection_failure.rs  error_screen.rs  menu_screen.rs  mod.rs  server_channels.rs  server_list.rs
server/: Cargo.toml
server/src/: atomic_boxed_doubly_linked_list.rs  certificate.rs  channel_db.rs  cli.rs  cli_core.rs  conc_once_cell.rs  conc_vec.rs  config.rs  main.rs  network.rs  packet.rs  protocol.rs  security_level.rs  server_group_db.rs  sized_box.rs  user_db.rs  utils.rs
