[package]
name = "RustSpeakClient"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
# config de-/serialization
serde = "1.0.144"
serde_derive = "1.0.144"
serde_json = "1.0.85"
# networking
tokio = { version = "1.20.1", features = [ "full" ] }
quinn = "0.10.1"
rustls = { version = "0.21.1", features = [ "dangerous_configuration", "quic" ] }

# rendering/graphics
wgpu = "0.16"
wgpu-biolerless = { git = "https://github.com/terrarier2111/wgpu-boilerless", features = [ "winit" ] }
wgpu_glyph = { git = "https://github.com/terrarier2111/wgpu_glyph" }
winit = "0.28"
# font-kit = "0.11"
fontdue = "0.7.2"

# other utils
uuid = { version = "1.1.2", features = [ "v4" ] }
ripemd = "0.1.1"
sha2 = "0.10.2"
rand = "0.8.5"
# byteorder = "1.4.3"
bytemuck = "1.12.1"
bytemuck_derive = "1.2.1"
arc-swap = "1.6.0"
bytes = "1.2.1"
anyhow = "1.0.62"
pollster = "0.3.0"
dirs = "5.0.1"
openssl = { version = "0.10.41", features = ["vendored"] }
# druid = "0.7.0" # we can't use druid as it's not ready for any real ui work
ordinalizer = { git = "https://github.com/terrarier2111/ordinalize" }
num-bigint = "0.4.3"
ruint = "1.3.0"
flume = "0.10.14"
guillotiere = "0.6.2"
swap-arc = { git = "https://github.com/terrarier2111/SwapArc" }
sled = "0.34.7"
colored = "2.0.0"
dashmap = "5.4.0"
atomic_float = "0.1.0"
# cpal = { version = "0.14.0", features = ["jack"] }
cpal = "0.15.2"
sfml = { version = "0.20.0", features = ["audio"] }
futures-util = "0.3.24"
image = "0.24.6"
console = "0.15.7"
